# datasette-test-plugin

./: pyproject.toml
tests/: test_test_plugin.py
